must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/namespaces/istio-samples/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-2","maistra-version":"2.3.2","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.3.2-1-2
    creationTimestamp: "2023-03-24T17:28:13Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.3.2
      maistra.io/member-of: istio-system
      release: istio
    name: istio-expose-route-basic
    namespace: istio-samples
    resourceVersion: "857954"
    uid: b3e41e17-86e9-491a-a351-39295131878e
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
    podSelector:
      matchLabels:
        maistra.io/expose-route: "true"
    policyTypes:
    - Ingress
  status: {}
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-2","maistra-version":"2.3.2","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.3.2-1-2
    creationTimestamp: "2023-03-24T17:28:13Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.3.2
      maistra.io/member-of: istio-system
      release: istio
    name: istio-mesh-basic
    namespace: istio-samples
    resourceVersion: "857952"
    uid: 046f52c4-f742-487e-aa30-ff939504b859
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            maistra.io/member-of: istio-system
    podSelector: {}
    policyTypes:
    - Ingress
  status: {}
kind: NetworkPolicyList
metadata:
  resourceVersion: "1903160"
